# SoteriaSystems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
components/AM312_driver/: CMakeLists.txt  am312.c
components/AM312_driver/include/: am312.h
components/app_events/: app_events.h
components/led_driver/: CMakeLists.txt  led_driver.c
components/led_driver/include/: led_driver.h
components/motion_sensor_driver/: CMakeLists.txt  motion_sensor.c
components/motion_sensor_driver/include/: motion_sensor.h
components/project_config/include/: gpio_config.h
main/: CMakeLists.txt  main.c
main/include/: alarm_system.h  hash_sha256.h  http_implementaion.h  rc522_implementation.h  system_formatter.h  time_sync.h  wifi_implementation.h
main/src/: alarm_system.c  hash_sha256.c  http_implementation.c  rc522_implementation.c  system_formatter.c  time_sync.c  wifi_implementation.c
